[gd_scene load_steps=14 format=3 uid="uid://nm3boasyetbu"]

[ext_resource type="Script" path="res://main.gd" id="1_oeid1"]
[ext_resource type="Texture2D" uid="uid://8lbmefneed5e" path="res://images/noise-1152x648.png" id="2_a7dol"]
[ext_resource type="Shader" path="res://shaders/pov.gdshader" id="3_1npqv"]
[ext_resource type="Texture2D" uid="uid://msoatjej4mkl" path="res://images/white-1152x648.png" id="4_2egnp"]
[ext_resource type="Material" uid="uid://bry5p6soxyg17" path="res://flat_material.tres" id="5_2nx5s"]
[ext_resource type="Material" uid="uid://c0xbnijvt885a" path="res://vantablack.tres" id="5_27n1h"]
[ext_resource type="Environment" uid="uid://bm8q134u8ih5q" path="res://binary_environment.tres" id="6_eemhp"]
[ext_resource type="Script" path="res://CubeMesh.gd" id="6_ii5mm"]
[ext_resource type="PackedScene" uid="uid://cc1m2a1obsyn4" path="res://fpc/character.tscn" id="8_8d5x8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8od3i"]
shader = ExtResource("3_1npqv")
shader_parameter/WHITE = Vector4(1, 1, 1, 1)
shader_parameter/BLACK = Vector4(0, 0, 0, 1)
shader_parameter/COLOR_1 = Vector4(1, 1, 1, 1)
shader_parameter/COLOR_2 = Vector4(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nk3eq"]

[sub_resource type="BoxMesh" id="BoxMesh_kpu5m"]
size = Vector3(0.02, 1.02, 0.02)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_07ui4"]
radius = 0.01
height = 3.0

[node name="Main" type="Node3D"]
script = ExtResource("1_oeid1")
resolution_scale = 2.0

[node name="Character" parent="." instance=ExtResource("8_8d5x8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.90698)
default_reticle = "res://fpc/reticles/reticle_0.tscn"
JUMP = "jump"
LEFT = "move_left"
RIGHT = "move_right"
FORWARD = "move_forward"
BACKWARD = "move_backward"

[node name="RenderVPContainer" type="SubViewportContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RenderViewport" type="SubViewport" parent="RenderVPContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 0

[node name="BG" type="TextureRect" parent="RenderVPContainer/RenderViewport"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_a7dol")
expand_mode = 1

[node name="OverlayRect" type="TextureRect" parent="RenderVPContainer/RenderViewport"]
visible = false
material = SubResource("ShaderMaterial_8od3i")
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_2egnp")
expand_mode = 1

[node name="StagingCamera" type="Camera3D" parent="."]
visible = false
environment = ExtResource("6_eemhp")

[node name="CubeMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.78814e-07, 0, -1.78814e-07, 1, 0, 0, -2.32466)
mesh = SubResource("BoxMesh_nk3eq")
surface_material_override/0 = ExtResource("5_27n1h")
script = ExtResource("6_ii5mm")

[node name="FrameMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.325)
script = ExtResource("6_ii5mm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1, -1.78814e-07, 0, -1.78814e-07, 1, 0.5, -8.9407e-08, 0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1, -1.78814e-07, 0, -1.78814e-07, 1, -0.5, 0, 0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1, -1.78814e-07, 0, -1.78814e-07, 1, 0.5, 0, -0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1, -1.78814e-07, 0, -1.78814e-07, 1, -0.5, 0, -0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1.35103e-07, -1, 0, 1, -2.22525e-07, 0.5, -0.500255, 0)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1.35103e-07, -1, 0, 1, -2.22525e-07, -0.5, -0.499915, 0)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1.35103e-07, -1, 0, 1, -2.22525e-07, 0.5, 0.500085, 0)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(1, 0, 0, 0, 1.35103e-07, -1, 0, 1, -2.22525e-07, -0.5, 0.500085, 0)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(-4.37114e-08, -1, 1.78814e-07, 1, -4.37114e-08, 7.81621e-15, 0, -1.78814e-07, 1, 4.51996e-08, 0.5, 0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(-4.37114e-08, -1, 1.78814e-07, 1, -4.37114e-08, 7.81621e-15, 0, -1.78814e-07, 1, -4.96057e-10, -0.5, 0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(-4.37114e-08, -1, 1.78814e-07, 1, -4.37114e-08, 7.81621e-15, 0, -1.78814e-07, 1, -4.42074e-08, 0.5, -0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="FrameMesh"]
transform = Transform3D(-4.37114e-08, -1, 1.78814e-07, 1, -4.37114e-08, 7.81621e-15, 0, -1.78814e-07, 1, -4.96057e-10, -0.5, -0.5)
mesh = SubResource("BoxMesh_kpu5m")
skeleton = NodePath("../../CubeMesh")

[node name="RodMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.12999)
mesh = SubResource("CapsuleMesh_07ui4")
surface_material_override/0 = ExtResource("5_2nx5s")

[node name="Node3D" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.74488, 0)
use_collision = true
size = Vector3(12.31, 0.25, 11.57)
